--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Home | Pain Family Studio</title>
+    <title>Contacto | Pain Family Studio</title>
 </head>
 <body>
   <header>
@@ -15,8 +15,7 @@
       <h3>Pain Family Studio</h3>
       <h6>Body Piercing - Joyería fina</h6>
     </div>
-  </header> 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark text-white">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark text-white">
       <div class="container-fluid">
         <button id="btn-theme" class="btn rounded-fill"><i id="tema-icon" class="bi bi-moon-fill"></i></button>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item ms-lg-2">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item ms-lg-2">
               <a class="nav-link" href="servicios.html">Servicios</a>
@@ -34,7 +33,7 @@
               <a class="nav-link" href="joyeria.html">Joyería</a>
             </li>
             <li class="nav-item ms-lg-2">
-              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item ms-lg-2">
               <a class="nav-link" href="nosotros.html">Nosotros</a>
@@ -45,78 +44,96 @@
             <button class="btn btn-outline-secondary me-4" type="submit">Search</button>
           </form>
       </div>
+        </div>
+    </nav>
+  </header> 
+
+  <main>
+    <section class="container-fluid px-0">
+    <div class="card text-bg-dark" id="bg-img-page">
+        <img src="assets/img/backgrounds/bg-overlay_1.png" class="card-img" alt="...">
+        <div class="card-img-overlay">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        </div>
+      </div>
     </div>
-  </nav>
+  </section>
+</main>
+
 
   <footer class="footer mt-4 text-light">
-        <div class="container" id="container-footer">
-        <div class="row">
-            <div class="col-md pr-md-5 mb-4 mb-md-0">
-            <h3>About Us</h3>
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam itaque unde facere repellendus, odio et iste voluptatum aspernatur ratione mollitia tempora eligendi maxime est, blanditiis accusamus. Incidunt, aut, quis!</p>
-            <ul class="list-unstyled quick-info mb-4">
-                <li>
-                <a href="#" class="d-flex align-items-center">
-                    <span class="me-2"><i class="bi bi-telephone-fill"></i></span> +1 291 3912 329
-                </a>
-                </li>
-                <li>
-                <a href="#" class="d-flex align-items-center">
-                    <span class="me-2"><i class="bi bi-envelope-fill"></i></span> info@gmail.com
-                </a>
-                </li>
-            </ul>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Ingresa tu correo electrónico" name="email_subscriptor">
-                <button class="btn btn-outline-black" type="button">Enviar</button>
-            </div>
-            </div>
-            <div class="col-md pr-md-5 mb-4 mb-md-0">
-            <h4>Mapa del Sitio</h4> <!--Esto no sé si sera obligarotio en una web-->
-            <hr class="text warning">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                <a class="nav-link text-white" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-white" href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-white" href="joyeria.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-white" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link text-white" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
-            </div>
-            <div class="col-md col-lg-3 pr-md-5 mb-md-0" id="instagram">
-            <h3>Instagram</h3>
-            <div class="row">
-                <div class="col-lg-6 col-md-5 pe-0 ">
-                <a href="https://www.instagram.com/p/Crvp4-RgDgX/?utm_source=ig_web_copy_link">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 me-md-1">
-                </a>
-                <a href="">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid  me-md-1">
-                </a>
-                </div>
-                <div class="col-lg-6 col-md-5 ps-0">
-                <a href="">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 ms-md-1">
-                </a>
-                <a href="">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid ms-md-1">
-                </a>
-                </div>
-            </div>
+    <div class="container" id="container-footer">
+      <div class="row">
+        <div class="col-md pr-md-5 mb-4 mb-md-0">
+          <h3>About Us</h3>
+          <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam itaque unde facere repellendus, odio et iste voluptatum aspernatur ratione mollitia tempora eligendi maxime est, blanditiis accusamus. Incidunt, aut, quis!</p>
+          <ul class="list-unstyled quick-info mb-4">
+            <li>
+              <a href="#" class="d-flex align-items-center">
+                <span class="me-2"><i class="bi bi-telephone-fill"></i></span> +1 291 3912 329
+              </a>
+            </li>
+            <li>
+              <a href="#" class="d-flex align-items-center">
+                <span class="me-2"><i class="bi bi-envelope-fill"></i></span> info@gmail.com
+              </a>
+              </li>
+          </ul>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Ingresa tu correo electrónico" name="email_subscriptor">
+            <button class="btn btn-outline-black" type="button">Enviar</button>
+          </div>
         </div>
-          
+        <div class="col-md pr-md-5 mb-4 mb-md-0" id="footer-nav">
+          <h4>Mapa del Sitio</h4> <!--Esto no sé si sera obligarotio en una web-->
+          <hr class="text warning">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="joyeria.html">Joyería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
+        <div class="col-md col-lg-3 pr-md-5 mb-md-0" id="instagram">
+          <h3>Instagram</h3>
+          <div class="row">
+            <div class="col-lg-6 col-md-5 pe-0 ">
+              <a href="https://www.instagram.com/p/Crvp4-RgDgX/?utm_source=ig_web_copy_link">
+                <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 me-md-1">
+              </a>
+              <a href="">
+                <img src="http://picsum.photos/150/150" alt="" class="img-fluid  me-md-1">
+              </a>
+            </div>
+            <div class="col-lg-6 col-md-5 ps-0">
+              <a href="">
+                <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 ms-md-1">
+              </a>
+              <a href="">
+                <img src="http://picsum.photos/150/150" alt="" class="img-fluid ms-md-1">
+              </a>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
   </footer>
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="assets/js/funciones.js"></script>
 </body>
 </html>
