--- a/joyeria.html
+++ b/joyeria.html
@@ -9,43 +9,76 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Joyería | Pain Family Studio</title>
 </head>
-<body>
+<body data-bs-theme="light" onload="mostrarFechaActual(), clima()" >
   <header>
-        <div class="container-fluid py-4" style="background-image: url('assets/img/bg_hojas.png');">
-        <h3>Pain Family Studio</h3>
-        <h6>Body Piercing - Joyería fina</h6>
+    <div class="container-fluid py-4" id="header">
+      <div class="row">
+        <div class="col-md-auto col-lg-auto px-0 mx-4">
+            <a class="navbar-brand mx-auto" href="#">
+              <img id="nav-logo" src="assets/img/logo.png" alt="Logo" width="50" height="50">
+            </a>
         </div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark text-white">
-            <div class="container-fluid">
-                <button id="btn-theme" class="btn rounded-fill"><i id="tema-icon" class="bi bi-moon-fill"></i></button>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item ms-lg-2">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item ms-lg-2">
-                        <a class="nav-link" href="servicios.html">Servicios</a>
-                        </li>
-                        <li class="nav-item ms-lg-2">
-                        <a class="nav-link active" aria-current="page" href="joyeria.html">Joyería</a>
-                        </li>
-                        <li class="nav-item ms-lg-2">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item ms-lg-2">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-secondary me-4" type="submit">Search</button>
-                    </form>
-                </div>
+        <div class="col-md-5 col-lg-6 ps-lg-0" id="header-title">
+          <div class="row">
+            <div class="col-12 mb-1">
+              <h3>Pain Family Studio</h3>
             </div>
-        </nav>
+            <div class="col-12">
+              <h6>Body Piercing - Joyería fina</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5  col-lg-3 mx-auto  me-1">
+          <div class="card mx-lg-auto pe-md-0 " id="widget-fecha">
+            <div class="card-body  pt-2">
+              <div class="row">
+                <div class="col-6">
+                  <div class="row">
+                    <div id="img-clima" class="col-md col-lg col-10"></div>
+                    <div id="info-clima" class="col-10"></div>
+                  </div>
+                </div>
+                <div class="col-6 m-auto ">
+                  <h4 id="hora" class="card-title mb-0 mt-2"></h4>
+                  <p id="fecha" class="card-text"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark text-white">
+      <div class="container-fluid">
+        <button id="btn-theme" class="btn rounded-fill"><i id="tema-icon" class="bi bi-moon-fill"></i></button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item ms-lg-2">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item ms-lg-2">
+              <a class="nav-link" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item ms-lg-2">
+              <a class="nav-link" href="joyeria.html">Joyería</a>
+            </li>
+            <li class="nav-item ms-lg-2">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item ms-lg-2">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-secondary me-4" type="submit">Search</button>
+          </form>
+        </div>
+     </div>
+    </nav>
   </header> 
 
     <main>
@@ -60,131 +93,126 @@
         </section>
 
         <section class="container mt-4">
-          <div class="row">
-            <div class="col-lg-4 col-md-8 col-md mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/yunke.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+          <div class="row row-cols-1 row-cols-md-1 row-cols-lg-3 gy-3">
+            <div class="col">
+              <div class="text-center">
+                <img src="assets/img/joyeria/yunke.jpg" class="img-hover" alt="">
+              </div>
             </div>
-            <div class="col-lg-4 col-md-8 mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/yunke_1.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col "> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/yunke_1.jpg" class="img-hover" alt="">
+              </div>
             </div>
-            <div class="col-lg-4 col-md-8 mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/yunke_2.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col "> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/yunke_2.jpg" class="img-hover" alt="">
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 col-md-8 col-md mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/biometaljewelry.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col"> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/biometaljewelry.jpg" class="img-hover" alt="">
+              </div>
             </div>
-            <div class="col-lg-4 col-md-8 mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/biometaljewelry_1.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col "> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/biometaljewelry_1.jpg" class="img-hover" alt="">
+              </div>
             </div>
-            <div class="col-lg-4 col-md-8 mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/biometaljewelry_2.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col "> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/biometaljewelry_2.jpg" class="img-hover" alt="">
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 col-md-8 col-md mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/industrialstrength.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col"> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/industrialstrength.jpg" class="img-hover" alt="">
+              </div>
             </div>
-            <div class="col-lg-4 col-md-8 mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/industrialstrength_1.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col "> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/industrialstrength_1.jpg" class="img-hover" alt="">
+              </div>
             </div>
-            <div class="col-lg-4 col-md-8 mx-auto"> 
-              <a href="">
-                <img src="assets/img/joyeria/industrialstrength_2.jpg" class="img-gallery my-md-4" alt="">
-              </a>
+            <div class="col "> 
+              <div class="text-center">
+                <img src="assets/img/joyeria/industrialstrength_2.jpg" class="img-hover" alt="">
+              </div>
             </div>
           </div>
         </section>
     </main>
 
-    <footer class="footer mt-4 text-light">
-        <div class="container" id="container-footer">
-          <div class="row">
-            <div class="col-md pr-md-5 mb-4 mb-md-0">
-              <h3>About Us</h3>
-              <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam itaque unde facere repellendus, odio et iste voluptatum aspernatur ratione mollitia tempora eligendi maxime est, blanditiis accusamus. Incidunt, aut, quis!</p>
-              <ul class="list-unstyled quick-info mb-4">
-                <li>
-                  <a href="#" class="d-flex align-items-center">
-                    <span class="me-2"><i class="bi bi-telephone-fill"></i></span> +1 291 3912 329
-                  </a>
+    <footer class="footer text-light">
+      <div class="container" id="container-footer">
+        <div class="row">
+          <div class="col-md pr-md-5 mb-4 mb-md-0">
+            <div id="googleMap" style="width:100%;height:60%;"></div>
+            <ul class="list-unstyled quick-info mb-4">
+              <li>
+                <a href="#" class="d-flex align-items-center">
+                  <span class="me-2"><i class="bi bi-telephone-fill"></i></span> +1 291 3912 329
+                </a>
+              </li>
+              <li>
+                <a href="#" class="d-flex align-items-center">
+                  <span class="me-2"><i class="bi bi-envelope-fill"></i></span> info@gmail.com
+                </a>
                 </li>
-                <li>
-                  <a href="#" class="d-flex align-items-center">
-                    <span class="me-2"><i class="bi bi-envelope-fill"></i></span> info@gmail.com
-                  </a>
-                  </li>
-              </ul>
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Ingresa tu correo electrónico" name="email_subscriptor">
-                <button class="btn btn-outline-black" type="button">Enviar</button>
-              </div>
+            </ul>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Ingresa tu correo electrónico" name="email_subscriptor">
+              <button class="btn btn-outline-black" type="button">Enviar</button>
             </div>
-            <div class="col-md pr-md-5 mb-4 mb-md-0" id="footer-nav">
-              <h4>Mapa del Sitio</h4> <!--Esto no sé si sera obligarotio en una web-->
-              <hr class="text warning">
-              <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="joyeria.html">Joyería</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md col-lg-3 pr-md-5 mb-md-0" id="instagram">
-              <h3>Instagram</h3>
-              <div class="row">
-                <div class="col-lg-6 col-md-5 pe-0 ">
-                  <a href="https://www.instagram.com/p/Crvp4-RgDgX/?utm_source=ig_web_copy_link">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 me-md-1">
-                  </a>
-                  <a href="">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid  me-md-1">
-                  </a>
-                </div>
-                <div class="col-lg-6 col-md-5 ps-0">
-                  <a href="">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 ms-md-1">
-                  </a>
-                  <a href="">
-                    <img src="http://picsum.photos/150/150" alt="" class="img-fluid ms-md-1">
-                  </a>
-                </div>
-              </div>
-            </div> 
           </div>
+          <div class="col-md pr-md-5 mb-4 mb-md-0" id="footer-nav">
+            <h4>Mapa del Sitio</h4> <!--Esto no sé si sera obligarotio en una web-->
+            <hr class="text warning">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="servicios.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="joyeria.html">Joyería</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md col-lg-3 pr-md-5 mb-md-0" id="instagram">
+            <h3>Instagram</h3>
+            <div class="row">
+              <div class="col-lg-6 col-md-5 pe-0 ">
+                <a href="https://www.instagram.com/p/Crvp4-RgDgX/?utm_source=ig_web_copy_link">
+                  <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 me-md-1">
+                </a>
+                <a href="">
+                  <img src="http://picsum.photos/150/150" alt="" class="img-fluid  me-md-1">
+                </a>
+              </div>
+              <div class="col-lg-6 col-md-5 ps-0">
+                <a href="">
+                  <img src="http://picsum.photos/150/150" alt="" class="img-fluid mb-1 me-lg-1 ms-md-1">
+                </a>
+                <a href="">
+                  <img src="http://picsum.photos/150/150" alt="" class="img-fluid ms-md-1">
+                </a>
+              </div>
+            </div>
+          </div> 
         </div>
+      </div>
     </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="assets/js/funciones.js"></script>
-</body>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="assets/js/funciones.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBt3ixABltNzmL_-1YiKKy2uKEksuLwnGI&callback=myMap"></script></body>
 </html>
