agrego info a card, tambien nosotros

--- a/contacto.html
+++ b/contacto.html
@@ -81,22 +81,22 @@
     </nav>
   </header> 
 
+  <!--Card con imagen-->
   <main>
     <section class="container-fluid px-0">
     <div class="card text-bg-dark" id="bg-img-page">
         <img src="assets/img/backgrounds/bg-overlay_1.png" class="card-img" alt="...">
         <div class="card-img-overlay">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+          <br>
+          <h1 class="card-title">Contactanos</h1>
+          <p class="card-text">Ponte en contacto con nuestro equipo de expertos en bodypiercing par aclarar tus dudas.</p>
+          
         </div>
       </div>
     </div>
   </section>
 
-  <div class="container">
-    <h1>Contactanos</h1>
-</div>
+    <br>
     <div class="container">
         <div class="row">
 
@@ -195,8 +195,10 @@
             <div class=" m-3 col-12">
                 <button type="button" class="btn btn-primary mt-4" onclick="validacionFormulario()">Enviar</button>
             </div>
-</main>
+            <br>
+  </main>
 
+ <!--Footer-->
 
 <footer class="footer text-light">
   <div class="container" id="container-footer">
@@ -221,7 +223,7 @@
         </div>
       </div>
       <div class="col-md pr-md-5 mb-4 mb-md-0" id="footer-nav">
-        <h4>Mapa del Sitio</h4> <!--Esto no sé si sera obligarotio en una web-->
+        <h4>Mapa del Sitio</h4> 
         <hr class="text warning">
         <ul class="nav flex-column">
           <li class="nav-item">
