--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
           <div class="card mx-auto">
             <img src="assets/img/backgrounds/joyeria.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Nuestra Joyería</h5>
+              <h5 class="card-title">Catálogo</h5>
               <p class="card-text">Conoce en detalle los materiales y marcas con los que trabajamos.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Ver</a>
             </div>
           </div>
         </div>
@@ -169,9 +169,9 @@
           <div class="card mx-auto">
             <img src="assets/img/backgrounds/nosotros.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Perforaciones</h5>
+              <p class="card-text">Conoce las diferentes perforaciones que realizamos.</p>
+              <a href="#" class="btn btn-primary">Ver</a>
             </div>
           </div>
         </div>
@@ -179,9 +179,9 @@
           <div class="card mx-auto">
             <img src="assets/img/backgrounds/servicio.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick examplentent.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Estudio</h5>
+              <p class="card-text">Conoce nuestro espacio de trabajo y sus instalaciones.</p>
+              <a href="#" class="btn btn-primary">Ver</a>
             </div>
           </div>
         </div>
@@ -189,9 +189,9 @@
           <div class="card mx-auto">
             <img src="assets/img/backgrounds/contacto.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Equipo</h5>
+              <p class="card-text">Conoce nuestro equipo de trabajo y sus funciones.</p>
+              <a href="#" class="btn btn-primary">Ver</a>
             </div>
           </div>
         </div>
