--- a/joyeria.html
+++ b/joyeria.html
@@ -81,14 +81,14 @@
     </nav>
   </header> 
 
+  <!--Card con imagen-->
     <main>
         <section class="card text-bg-dark" id="bg-img-page">
             <img src="assets/img/backgrounds/bg-overlay_4.png" class="card-img" alt="...">
             <div class="card-img-overlay">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small>Last updated 3 mins ago</small></p>
-            </div>
+              <h1 class="card-title">Catálogo</h1>
+              <p class="card-text">En Pain Family Studio puedes encontrar joyería de titanio certificado (ASTM-F136) y de oro sólido con gemas preciosas.</p>
+             </div>
           </div>
         </section>
 
