--- a/nosotros.html
+++ b/nosotros.html
@@ -81,19 +81,49 @@
     </nav>
   </header> 
 
+  <!--Card con imagen-->
   <main>
-    <section class="card text-bg-dark" id="bg-img-page">
+    <section class="container-fluid px-0">
+      <div class="card text-bg-dark" id="bg-img-page">
         <img src="assets/img/backgrounds/bg-overlay_3.png" class="card-img" alt="...">
         <div class="card-img-overlay">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
-        </div>
+          <br>
+          <h1 class="card-title">Equipo de desarrollo web</h1>
+          </div>
       </div>
     </section>
 </main>
 
+  <div class="col-lg-5 col-lg my-lg-5 mx-auto">
+    <br>
+    <section>
+      <h3>Acerca de nosotros</h3>
+      <p>Somos un equipo de programadores web dedicado a al desarrollo de plataformas web, aplicaciones moviles y softwares de alta calidad.</p>
+    </section>
+    <section>
+      <h3>Nuestro equipo</h3>
+      <ul>
+        <li>
+          <strong>Fernanda Valenzuela, </strong><em>Encargada de proyecto.</em>
+          <p>Es quién tiene como objetivo gestionar y aplicar metodologías de trabajo en cada uno de los proyectos.</p>
+        </li>
+        <li>
+          <strong>Gabriela Sepúlveda, </strong><em>Encargada de desarrollo web.</em>
+          <p>Es quién tiene como objetivo diseñar, programar y monitorear el sitio web.</p>
+        </li>
+        <li>
+          <strong>Joan Amaya, </strong><em>Analista programador.</em>
+          <p>Es el encargado de implementar,analizar y asegurar la continuidad de los sistemas implementados. </p>
+        </li>
+      </ul>
+      <br>
+    </section>
+  </div>
+    
 
+  
+
+    
 <footer class="footer text-light">
   <div class="container" id="container-footer">
     <div class="row">
