--- a/servicios.html
+++ b/servicios.html
@@ -80,15 +80,14 @@
      </div>
     </nav>
   </header> 
-
+ <!--Card con imagen-->
   <main>
     <section class="card text-bg-dark" id="bg-img-page">
         <img src="assets/img/backgrounds/bg-overlay_2.png" class="card-img" alt="...">
         <div class="card-img-overlay">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
-        </div>
+          <h1 class="card-title">Servicios</h1>
+          <p class="card-text">Pain Family Studio ofrece servicios de perforaciones, controles y venta de joyería fina certificada.</p>
+          </div>
       </div>
     </section>
 
