modificaciones de funcion validarFormulario

--- a/contacto.html
+++ b/contacto.html
@@ -190,7 +190,7 @@
       </div>
 
       <div class=" m-3 col-12">
-        <button id="btn-submit" type="button" class="btn btn-primary mt-4" onclick="validacionFormulario()">Enviar</button>
+        <button id="btn-submit" type="button" class="btn btn-primary mt-4">Enviar</button>
       </div>
     </section>
   </main>
